2/27/14 rename Basics -> Macro throughout code, images, GitHub
2/27/14 add 'off scale' to strings file
2/27/14 increase y-spacing in pH meter, so that picker isn't so close to expand/collapse button
2/27/14 restrict size of 'off scale' label for i18n, so that the label fits inside the arrow
2/27/14 remove option to have linear scale with no arrow at the top, decided to always show the arrow
2/27/14 make zoom buttons a bit larger, increase horizontal space between them, make linear scale a bit shorter to avoid crowding buttons
2/27/14 change top margin to 15 for 'Micro' and 'Custom' screens
2/27/14 disable icon in zoom button when the button is disabled
2/27/14 touch area for expand/collapse button in pH meter
2/27/14 make 'off screen' label slightly larger
2/27/14 refine options for SubSupText
2/24/14 start fleshing out SubSupText with options and setters/getters
2/24/14 clicking on faucet shooter cancels any tap-to-dispense that may be in progress, scenery-phet#31
2/24/14 #4, limit precision of pH in model so that consistent values are presented to user
2/24/14 #3 investigate why interactive graph indicators are failing on iPad, traced to scenery.HTMLText, abandoned there
2/24/14 prevent needless creation of an additional custom solute in the case where the pH is unchanged
2/20/14 fix problem with timers in tap-to-dispense feature of FaucetNode, phetsims/phet-scale#1, phetsims/scenery-phet#31
# 1.0.0-dev.13 2/15/14
2/15/14 add interactive arrows to graph indicators
2/15/14 delete handle and shadow from interactive graph indicators, in preparation for adding arrows
2/15/14 changes options interface for tap-to-dispense feature in FaucetNode
2/12/14 revised 'Custom' screen icon, .ai file for all screen icons
# 1.0.0-dev.12 2/12/14
2/12/14 change tap-to-dispense parameters: flowRate=0.15, interval=333
2/12/14 lighten color of pH probe from RGB(80,80,80) to RGB(140,140,140)
2/12/14 new screen names: Basics -> Macro, Solutions -> Micro