@@ -1,6 +1,6 @@
 Macro-screen-icon.png source=PhET author=Yuen-ying Carpenter
 Custom-screen-icon.png source=PhET author=Yuen-ying Carpenter
-Solutions-screen-icon.png source=PhET author=Yuen-ying Carpenter
+Micro-screen-icon.png source=PhET author=Yuen-ying Carpenter
 pH-meter-probe.png author=PhET notes=copied from beers-law-lab
 dropper-icon.png author=PhET notes=copied from beers-law-lab
 dropper_background.png author=PhET notes=copied from beers-law-lab
