@@ -1,7 +1,7 @@
 // Copyright 2002-2013, University of Colorado Boulder
 
 /**
- * The 'Solutions' screen.
+ * The 'Micro' screen.
  *
  * @author Chris Malley (PixelZoom, Inc.)
  */
@@ -11,27 +11,27 @@ define( function( require ) {
   // imports
   var Image = require( 'SCENERY/nodes/Image' );
   var inherit = require( 'PHET_CORE/inherit' );
+  var MicroModel = require( 'PH_SCALE/micro/model/MicroModel' );
+  var MicroView = require( 'PH_SCALE/micro/view/MicroView' );
   var ModelViewTransform2 = require( 'PHETCOMMON/view/ModelViewTransform2' );
   var PHScaleColors = require( 'PH_SCALE/common/PHScaleColors' );
   var Screen = require( 'JOIST/Screen' );
-  var SolutionsModel = require( 'PH_SCALE/solutions/model/SolutionsModel' );
-  var SolutionsView = require( 'PH_SCALE/solutions/view/SolutionsView' );
 
   // strings
   var screenTitle = require( 'string!PH_SCALE/micro' );
 
   // images
-  var screenIcon = require( 'image!PH_SCALE/Solutions-screen-icon.png' );
+  var screenIcon = require( 'image!PH_SCALE/Micro-screen-icon.png' );
 
-  function SolutionsScreen() {
+  function MicroScreen() {
     Screen.call( this,
       screenTitle,
       new Image( screenIcon ),
-      function() { return new SolutionsModel(); },
-      function( model ) { return new SolutionsView( model, ModelViewTransform2.createIdentity() ); },
+      function() { return new MicroModel(); },
+      function( model ) { return new MicroView( model, ModelViewTransform2.createIdentity() ); },
       { backgroundColor: PHScaleColors.SCREEN_BACKGROUND }
     );
   }
 
-  return inherit( Screen, SolutionsScreen );
+  return inherit( Screen, MicroScreen );
 } );
